Revert "Fix carousel captions not hidden by default"
This reverts commit ee9ef355cce3e5efd64fc10918a70920d0dbc4a7.

--- a/less/carousel.less
+++ b/less/carousel.less
@@ -159,7 +159,6 @@
   right: 15%;
   bottom: 20px;
   z-index: 10;
-  .hidden-phone;
   padding-top: 20px;
   padding-bottom: 20px;
   color: #fff;
@@ -187,7 +186,6 @@
   .carousel-caption {
     left: 20%;
     right: 20%;
-	display: inherit !important;
     padding-bottom: 30px;
   }
 }
